--- a/fireworksGame/Base.lproj/Main.storyboard
+++ b/fireworksGame/Base.lproj/Main.storyboard
@@ -2,8 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="XmU-54-yhi">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -19,19 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLV-vd-ugN">
-                                <rect key="frame" x="436" y="550" width="148" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2L-Pi-4CR">
+                                <rect key="frame" x="485" y="20" width="99" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="UdC-BZ-r4U"/>
-                                    <constraint firstAttribute="width" constant="148" id="XcO-sW-r9s"/>
+                                    <constraint firstAttribute="width" constant="99" id="HIK-SS-0Ei"/>
+                                    <constraint firstAttribute="height" constant="30" id="UsQ-0a-6H6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="High Scores">
+                                <state key="normal" title="Settings">
                                     <color key="titleColor" red="1" green="0.020100812986999284" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="YaO-Xh-utn" kind="show" id="p0T-Dr-Em2"/>
+                                    <segue destination="qQD-Bt-HCq" kind="show" id="Hkh-Xb-5Lh"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gwz-lH-8R0">
@@ -48,7 +46,7 @@
                                     <segue destination="BV1-FR-VrT" kind="show" id="USh-F4-HCm"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ILLUMINATE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nRy-NW-Qur">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="ILLUMINATE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nRy-NW-Qur">
                                 <rect key="frame" x="16" y="229" width="568" height="142"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="142" id="CQS-Sg-gxJ"/>
@@ -64,9 +62,10 @@
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmJ-4i-ws6">
-                                <rect key="frame" x="16" y="550" width="146" height="31"/>
+                                <rect key="frame" x="438" y="58" width="146" height="31"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="146" id="bX2-Rw-HUX"/>
+                                    <constraint firstAttribute="height" constant="31" id="2Ap-Tc-pUf"/>
+                                    <constraint firstAttribute="width" constant="146" id="xmr-Gx-XQu"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <state key="normal" title="How To Play">
@@ -77,19 +76,18 @@
                                     <segue destination="uxi-3x-oVF" kind="show" id="Z0L-VL-6n3"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V2L-Pi-4CR">
-                                <rect key="frame" x="485" y="20" width="99" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tLV-vd-ugN">
+                                <rect key="frame" x="226" y="536" width="148" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="99" id="HIK-SS-0Ei"/>
-                                    <constraint firstAttribute="height" constant="30" id="UsQ-0a-6H6"/>
+                                    <constraint firstAttribute="width" constant="148" id="K3W-xx-6ZO"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <state key="normal" title="Settings">
+                                <state key="normal" title="High Scores">
                                     <color key="titleColor" red="1" green="0.020100812986999284" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="qQD-Bt-HCq" kind="show" id="Hkh-Xb-5Lh"/>
+                                    <segue destination="YaO-Xh-utn" kind="show" id="p0T-Dr-Em2"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -97,19 +95,16 @@
                         <constraints>
                             <constraint firstItem="nRy-NW-Qur" firstAttribute="top" secondItem="uqW-Qv-HG9" secondAttribute="bottom" constant="194" id="16J-cB-7Pi"/>
                             <constraint firstItem="V2L-Pi-4CR" firstAttribute="top" secondItem="uqW-Qv-HG9" secondAttribute="bottom" id="1PJ-9e-fuN"/>
+                            <constraint firstItem="4ua-yY-2G4" firstAttribute="top" secondItem="tLV-vd-ugN" secondAttribute="bottom" constant="191" id="1ga-Ga-Jux"/>
                             <constraint firstItem="Gwz-lH-8R0" firstAttribute="centerX" secondItem="nRy-NW-Qur" secondAttribute="centerX" id="1nZ-Wy-Uxo"/>
-                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="baseline" secondItem="tLV-vd-ugN" secondAttribute="firstBaseline" id="2Q4-W6-vHb"/>
-                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="leading" secondItem="nRy-NW-Qur" secondAttribute="leading" id="4i3-EO-Vwr"/>
-                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="top" secondItem="tLV-vd-ugN" secondAttribute="top" id="A4y-bm-8XU"/>
-                            <constraint firstItem="V2L-Pi-4CR" firstAttribute="trailing" secondItem="tLV-vd-ugN" secondAttribute="trailing" id="ET2-Qb-pZa"/>
+                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="trailing" secondItem="V2L-Pi-4CR" secondAttribute="trailing" id="98f-6a-mrg"/>
                             <constraint firstItem="nRy-NW-Qur" firstAttribute="top" secondItem="4SA-cm-Q4Q" secondAttribute="top" constant="214" id="Ka2-E2-bDd"/>
                             <constraint firstItem="nRy-NW-Qur" firstAttribute="centerY" secondItem="4SA-cm-Q4Q" secondAttribute="centerY" id="RE2-2i-ybm"/>
-                            <constraint firstItem="tLV-vd-ugN" firstAttribute="trailing" secondItem="4SA-cm-Q4Q" secondAttribute="trailingMargin" id="Zkx-jO-F3N"/>
-                            <constraint firstAttribute="bottom" secondItem="tLV-vd-ugN" secondAttribute="bottom" constant="20" symbolic="YES" id="bZp-oH-kqb"/>
+                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="top" secondItem="V2L-Pi-4CR" secondAttribute="bottom" constant="8" symbolic="YES" id="ZUU-DX-YZm"/>
                             <constraint firstItem="Gwz-lH-8R0" firstAttribute="top" secondItem="uqW-Qv-HG9" secondAttribute="bottom" constant="307" id="efN-SP-OY1"/>
-                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="centerY" secondItem="tLV-vd-ugN" secondAttribute="centerY" id="fh2-O4-KY1"/>
+                            <constraint firstItem="tLV-vd-ugN" firstAttribute="centerX" secondItem="Gwz-lH-8R0" secondAttribute="centerX" id="jmS-bh-mzG"/>
                             <constraint firstItem="Gwz-lH-8R0" firstAttribute="bottom" secondItem="nRy-NW-Qur" secondAttribute="bottom" id="ods-J5-j1s"/>
-                            <constraint firstItem="mmJ-4i-ws6" firstAttribute="firstBaseline" secondItem="tLV-vd-ugN" secondAttribute="baseline" id="pND-u8-B54"/>
+                            <constraint firstAttribute="bottom" secondItem="tLV-vd-ugN" secondAttribute="bottom" constant="20" symbolic="YES" id="rfo-nA-M52"/>
                             <constraint firstItem="V2L-Pi-4CR" firstAttribute="trailing" secondItem="nRy-NW-Qur" secondAttribute="trailing" id="zQw-Th-9nC"/>
                             <constraint firstItem="Gwz-lH-8R0" firstAttribute="centerX" secondItem="4SA-cm-Q4Q" secondAttribute="centerX" id="zno-KD-TzD"/>
                         </constraints>
@@ -117,13 +112,14 @@
                             <mask key="constraints">
                                 <exclude reference="16J-cB-7Pi"/>
                                 <exclude reference="Ka2-E2-bDd"/>
+                                <exclude reference="1ga-Ga-Jux"/>
                             </mask>
                         </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R4F-09-R3b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-439" y="-353"/>
+            <point key="canvasLocation" x="-451" y="-337"/>
         </scene>
         <!--settings-->
         <scene sceneID="MjR-qa-Ryk">
@@ -147,35 +143,47 @@
                                     <segue destination="XmU-54-yhi" kind="show" id="wyo-5o-hcp"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q7-qe-hyQ">
-                                <rect key="frame" x="264" y="24" width="73" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Basic Font:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7C-TO-8ba">
-                                <rect key="frame" x="180" y="84" width="87" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="6J9-8n-ELH">
-                                <rect key="frame" x="334" y="79" width="51" height="31"/>
+                                <rect key="frame" x="353" y="79" width="51" height="31"/>
                                 <color key="onTintColor" red="1" green="0.020100812990000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Basic Font:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y7C-TO-8ba">
+                                <rect key="frame" x="175" y="84" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Q7-qe-hyQ">
+                                <rect key="frame" x="269" y="24" width="63" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="y7C-TO-8ba" firstAttribute="top" secondItem="4fZ-5L-lRs" secondAttribute="bottom" constant="34" id="6nO-wU-GBd"/>
-                            <constraint firstItem="7Q7-qe-hyQ" firstAttribute="trailing" secondItem="y7C-TO-8ba" secondAttribute="trailing" constant="70" id="Alq-rn-8fo"/>
-                            <constraint firstItem="y7C-TO-8ba" firstAttribute="leading" secondItem="4fZ-5L-lRs" secondAttribute="leading" constant="164" id="cbO-cg-Iwv"/>
+                            <constraint firstItem="6J9-8n-ELH" firstAttribute="trailing" secondItem="7Q7-qe-hyQ" secondAttribute="trailing" constant="70" id="AcL-Bm-I6s"/>
+                            <constraint firstItem="7Q7-qe-hyQ" firstAttribute="trailing" secondItem="y7C-TO-8ba" secondAttribute="trailing" constant="105" id="Alq-rn-8fo"/>
+                            <constraint firstAttribute="centerX" secondItem="6J9-8n-ELH" secondAttribute="centerX" constant="-69.5" id="Hft-Lg-Yx6"/>
+                            <constraint firstItem="y7C-TO-8ba" firstAttribute="leading" secondItem="4fZ-5L-lRs" secondAttribute="leading" constant="129" id="cbO-cg-Iwv"/>
                             <constraint firstItem="6J9-8n-ELH" firstAttribute="centerY" secondItem="y7C-TO-8ba" secondAttribute="centerY" id="dgF-lf-pfj"/>
                             <constraint firstItem="4fZ-5L-lRs" firstAttribute="leading" secondItem="UN6-nX-W2P" secondAttribute="leadingMargin" id="hob-vO-kAS"/>
+                            <constraint firstItem="7Q7-qe-hyQ" firstAttribute="trailing" secondItem="y7C-TO-8ba" secondAttribute="trailing" constant="70" id="hqe-o1-4SZ"/>
                             <constraint firstItem="7Q7-qe-hyQ" firstAttribute="centerX" secondItem="UN6-nX-W2P" secondAttribute="centerX" id="i22-yi-bqk"/>
                             <constraint firstItem="7Q7-qe-hyQ" firstAttribute="top" secondItem="xIx-cQ-qUf" secondAttribute="bottom" constant="4" id="mi1-Lv-QYI"/>
-                            <constraint firstItem="6J9-8n-ELH" firstAttribute="leading" secondItem="7Q7-qe-hyQ" secondAttribute="leading" constant="70" id="qkU-Od-UCN"/>
+                            <constraint firstItem="6J9-8n-ELH" firstAttribute="leading" secondItem="7Q7-qe-hyQ" secondAttribute="leading" constant="81" id="qkU-Od-UCN"/>
+                            <constraint firstItem="7Q7-qe-hyQ" firstAttribute="baseline" secondItem="4fZ-5L-lRs" secondAttribute="baseline" id="tvk-hB-Dql"/>
                             <constraint firstItem="4fZ-5L-lRs" firstAttribute="top" secondItem="xIx-cQ-qUf" secondAttribute="bottom" id="zdA-1G-UbZ"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="cbO-cg-Iwv"/>
+                                <exclude reference="Alq-rn-8fo"/>
+                                <exclude reference="Hft-Lg-Yx6"/>
+                                <exclude reference="qkU-Od-UCN"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HmZ-ps-DD4" userLabel="First Responder" sceneMemberID="firstResponder"/>
