--- a/fireworksGame/Base.lproj/Main.storyboard
+++ b/fireworksGame/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="C7nazara" family="C7nazara" pointSize="40"/>
                                 <state key="normal" title="Play">
-                                    <color key="titleColor" red="1" green="0.020100812986999284" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="default">
@@ -168,9 +168,9 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="57I-4g-1u7"/>
                                 <exclude reference="16J-cB-7Pi"/>
                                 <exclude reference="Ka2-E2-bDd"/>
-                                <exclude reference="57I-4g-1u7"/>
                                 <exclude reference="8jy-qd-4nr"/>
                                 <exclude reference="S8A-UY-cAq"/>
                                 <exclude reference="dj0-WI-RNf"/>
