--- a/fireworksGame/Base.lproj/Main.storyboard
+++ b/fireworksGame/Base.lproj/Main.storyboard
@@ -512,7 +512,7 @@
                                     <segue destination="XmU-54-yhi" kind="show" id="2Z3-e8-PkO"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="FEv-z2-kFh">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="white" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="FEv-z2-kFh">
                                 <rect key="frame" x="16" y="48" width="568" height="544"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="1" green="0.020100812990000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -599,7 +599,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mpZ-mf-bh8">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mpZ-mf-bh8">
                                 <rect key="frame" x="16" y="60" width="568" height="262"/>
                             </imageView>
                             <label autoresizesSubviews="NO" opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Information goes here. Oh yes it does it does itdwiojfcw;eve" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="59I-dn-waZ">
@@ -705,7 +705,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lzq-Hi-q5r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1412" y="387"/>
+            <point key="canvasLocation" x="-1209" y="1079"/>
         </scene>
         <!--howToPlayPageView-->
         <scene sceneID="U9r-ZZ-SkO">
@@ -713,15 +713,15 @@
                 <pageViewController autoresizesArchivedViewToFullSize="NO" title="howToPlayPageView" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="uxi-3x-oVF" customClass="HowToPlayPageViewController" customModule="fireworksGames" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WWL-8f-EGr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-679" y="603"/>
+            <point key="canvasLocation" x="-1209" y="403"/>
         </scene>
     </scenes>
     <resources>
         <image name="logo" width="508" height="130"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XAP-F5-Tfu"/>
-        <segue reference="USh-F4-HCm"/>
+        <segue reference="2Z3-e8-PkO"/>
         <segue reference="p0T-Dr-Em2"/>
+        <segue reference="USh-F4-HCm"/>
     </inferredMetricsTieBreakers>
 </document>
